--- a/package.json
+++ b/package.json
@@ -11,10 +11,20 @@
     "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "hot": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "antlr": "antlr4ts -visitor ./sources/grammar/Unidoc.g4 -o ./sources/generated"
   },
   "devDependencies": {
+    "antlr4ts-cli": "^0.5.0-alpha.3",
+    "jest": "^24.9.0",
     "laravel-mix": "^5.0.1",
-    "typedoc-webpack-plugin": "^1.1.4"
+    "ts-loader": "^6.2.1",
+    "typedoc": "^0.16.8",
+    "typedoc-webpack-plugin": "^1.1.4",
+    "raw-loader": "^4.0.0",
+    "typescript": "~3.5.0"
+  },
+  "dependencies": {
+    "antlr4ts": "^0.5.0-alpha.3"
   }
 }
