--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@cedric-demongivert/gl-tool-collection": "^0.16.0",
-    "antlr4ts": "^0.5.0-alpha.3"
+    "antlr4ts": "^0.5.0-alpha.3",
+    "rxjs": "^6.5.4"
   }
 }
