--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.4",
   "description": "A universal scientific documentation validator and compiler.",
   "main": "index.js",
+  "types": "./types/index.d.ts",
   "repository": "https://gitlab.com/FlorentinTh/unidoc.git",
   "author": "Cédric DEMONGIVERT <cedric.demongivert@gmail.com>",
   "license": "Apache-2",
