--- a/package.json
+++ b/package.json
@@ -37,6 +37,11 @@
   },
   "dependencies": {
     "@cedric-demongivert/gl-tool-collection": "0.25.2",
-    "rxjs": "^6.5.4"
+    "@types/chance": "^1.1.3",
+    "@types/mime": "^2.0.3",
+    "chance": "^1.1.8",
+    "mime": "^2.5.2",
+    "rxjs": "^6.5.4",
+    "uri-js": "^4.4.1"
   }
 }
