--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,24 @@
-node_modules
-distribution
-documentation
-sources/generated
-coverage
-*.log
-report.*
-mix-manifest.json
-local
+# Ignore everything.
+*
+
+# Except sources.
+!sources
+!sources/**
+
+# Except tests.
+!tests
+!tests/**
+
+# Except configuration files.
+!.babelrc
+!.gitignore
+!.npmingore
+!jest.config.js
+!package.json
+!tsconfig.json
+!webpack.mix.js
+!.eslintrc.js
+
+# Except content.
+!LICENSE.md
+!README.md
