--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "webpack": "^5.15.0"
   },
   "dependencies": {
-    "@cedric-demongivert/gl-tool-collection": "0.25.2",
+    "@cedric-demongivert/gl-tool-collection": "^0.27.1",
+    "@cedric-demongivert/gl-tool-utils": "^0.0.9",
     "@types/chance": "^1.1.3",
     "@types/mime": "^2.0.3",
     "chance": "^1.1.8",
