--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "@types/benchmark": "^2.1.0",
     "@types/jest": "^27.0.3",
     "benchmark": "^2.1.4",
-    "jest": "^27.3.1",
+    "jest": "^28.1.0",
     "laravel-mix": "^6.0.10",
     "microtime": "^3.0.0",
-    "postcss": "8.4.0",
+    "postcss": "8.4.14",
     "raw-loader": "^4.0.0",
-    "ts-jest": "^27.0.7",
+    "ts-jest": "^28.0.3",
     "ts-loader": "^9.2.6",
     "typedoc": "^0.22.9",
     "typedoc-webpack-plugin": "^1.1.4",
@@ -36,10 +36,11 @@
     "webpack": "^5.15.0"
   },
   "dependencies": {
-    "@cedric-demongivert/gl-tool-collection": "^0.27.1",
-    "@cedric-demongivert/gl-tool-utils": "^0.0.9",
+    "@cedric-demongivert/gl-tool-collection": "^0.29.3",
+    "@cedric-demongivert/gl-tool-utils": "^0.2.4",
     "@types/chance": "^1.1.3",
     "@types/mime": "^2.0.3",
+    "chalk": "^4.1.2",
     "chance": "^1.1.8",
     "mime": "^3.0.0",
     "rxjs": "^7.4.0",
